...
            android:id="@+id/formula_editor_keyboard_string"
            style="@style/FormulaEditorButton"
            android:text="@string/formula_editor_string"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_ok"
            style="@style/FormulaEditorButton"
            android:text="@string/ok"
            android:layout_span="2" />
    </TableRow>
</TableLayout>

