...
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing">

        <TextView
            android:id="@+id/brick_place_at_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_place_at">
        </TextView>

        <TextView
            android:id="@+id/brick_place_at_x_textview"
            style="@style/BrickText.SingleLine"
            android:text="@string/x_label"
            app:layout_newLine="true">
        </TextView>

        <TextView
            android:id="@+id/brick_place_at_edit_text_x"
            style="@style/BrickEditText"
            app:layout_inputType="number"
            app:layout_textField="true">
        </TextView>

        <TextView
...
